# event-users

./: .env.example  .gitignore  .gitlab-ci.yml  CLAUDE.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  entrypoint.sh  pyproject.toml
.github/workflows/: publish-image.yml
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_add_user_name.py  0003_rename_volunteer_to_organizer.py  0004_email_source_changelog_webhook_outbox.py  0005_changelog_message_id.py  0006_drop_webhook_outbox.py  0007_add_user_locale.py
docs/: API_CONTRACTS.md  AUDIT.md  DATA_MODEL.md  DEPENDENCIES.md  SERVICE_OVERVIEW.md
event_users/: auth.py  config.py  consumer.py  errors.py  ioc.py  logger.py  main.py  metrics.py  middleware.py  routes.py  telemetry.py
event_users/adapters/: cache_notifier.py  changelog_db.py  sql.py  sync_publisher.py  users_db.py
event_users/controllers/: users.py
event_users/crm/: client.py  sync.py
event_users/db/: models.py
event_users/dto/: changelog.py  users.py
event_users/interfaces/: cache_notifier.py  changelog.py  sql.py  users.py
event_users/schemas/: changelog.py  users.py
event_users/webhook/: client.py  sender.py
tests/: conftest.py  test_auth.py  test_consumer.py  test_health.py  test_metrics.py  test_routes_auth.py
tests/adapters/: test_sync_publisher.py  test_users_db.py
tests/controllers/: test_users_controller.py
tests/crm/: test_decrypt.py  test_sync.py
tests/webhook/: test_sender.py
