[project]
name = "event-users"
version = "0.1.0"
description = "User management microservice with CRM sync"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.16.0",
    "asyncpg>=0.31.0",
    "colorama>=0.4.6",
    "cryptography>=44.0.0",
    "dishka>=1.8.0",
    "email-validator>=2.2.0",
    "fastapi>=0.135.1",
    "greenlet>=3.2.4",
    "httpx>=0.28.0",
    "pydantic-settings>=2.13.1",
    "pyjwt>=2.9",
    "rich>=14.3.3",
    "sqlalchemy>=2.0.48",
    "structlog>=25.5.0",
    "tenacity>=9.1.4",
    "ujson>=5.11.0",
    "uvicorn>=0.41.0",
]

[dependency-groups]
dev = [
    "code-review-graph>=2.3.1",
    "pre-commit>=4.5.1",
    "ruff>=0.15.4",
]

[tool.ruff]
exclude = [".env", ".git", ".mypy_cache", ".pytest_cache", ".venv"]
fix = true
unsafe-fixes = true
show-fixes = true
target-version = "py314"
line-length = 120

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
ignore = ["ANN401", "COM812", "D1", "D203", "D213", "EM", "FA", "FBT", "G004", "INP001", "ISC001", "PERF203", "PLR", "RET501", "RUF001", "S311", "TC001", "TC002", "TC003", "TRY003", "UP040"]
select = ["ALL"]

[tool.ruff.lint.extend-per-file-ignores]
"__init__.py" = ["F401", "F403"]
"tests/*.py" = ["ANN001", "ANN002", "ANN003", "ANN401", "PLR2004", "S101", "S311"]

[tool.ruff.lint.isort]
no-lines-before = ["local-folder", "standard-library"]
known-third-party = []
known-local-folder = []
lines-after-imports = 2
