[project]
name = "event-users"
version = "0.1.0"
description = "User management microservice with CRM sync"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.16.0",
    "asyncpg>=0.31.0",
    "cloudevents>=1.12.0",
    "cryptography>=44.0.0",
    "dishka>=1.8.0",
    "email-validator>=2.2.0",
    "event-schemas",
    "fastapi>=0.135.1",
    "faststream[rabbit]>=0.6.7",
    "greenlet>=3.2.4",
    "httpx>=0.28.0",
    "prometheus-client>=0.25.0",
    "pydantic-settings>=2.13.1",
    "pyjwt>=2.9",
    "sqlalchemy>=2.0.48",
    "structlog>=25.5.0",
    "ujson>=5.11.0",
    "uvicorn>=0.41.0",
    "opentelemetry-sdk>=1.30.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.30.0",
    "opentelemetry-instrumentation-fastapi>=0.51b0",
    "opentelemetry-instrumentation-httpx>=0.51b0",
    "opentelemetry-instrumentation-asyncpg>=0.51b0",
]

[tool.uv.sources]
# Self-contained build: event-schemas is pulled from its own repo by tag.
# For local schema work, temporarily swap to { path = "../event-schemas", editable = true }.
event-schemas = { path = "../event-schemas", editable = true }

[dependency-groups]
dev = [
    "code-review-graph>=2.3.1",
    "pre-commit>=4.5.1",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.25.0",
    "ruff>=0.15.4",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
exclude = [".env", ".git", ".mypy_cache", ".pytest_cache", ".venv"]
fix = true
unsafe-fixes = true
show-fixes = true
target-version = "py314"
line-length = 120

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
ignore = ["ANN401", "COM812", "D1", "D203", "D213", "EM", "FA", "FBT", "G004", "INP001", "ISC001", "PERF203", "PLR", "RET501", "RUF001", "S311", "TC001", "TC002", "TC003", "TRY003", "UP040"]
select = ["ALL"]

[tool.ruff.lint.extend-per-file-ignores]
"__init__.py" = ["F401", "F403"]
"tests/*.py" = ["ANN001", "ANN002", "ANN003", "ANN201", "ANN202", "ANN401", "E402", "PLR2004", "S101", "S311"]

[tool.ruff.lint.isort]
no-lines-before = ["local-folder", "standard-library"]
known-third-party = []
known-local-folder = []
lines-after-imports = 2
